# life-puck

./: .gitignore  CMakeLists.txt  LICENSE  README.md  platformio.ini
main/: BAT_Driver.cpp  BAT_Driver.h  CMakeLists.txt  Display_ST77916.cpp  Display_ST77916.h  I2C_Driver.cpp  I2C_Driver.h  LVGL_Driver.cpp  LVGL_Driver.h  LifePuck.cpp  PWR_Key.cpp  PWR_Key.h  RTC_PCF85063.cpp  TCA9554PWR.cpp  Touch_CST816.cpp  Touch_CST816.h  Wireless.cpp  Wireless.h  arc_animation.cpp  arc_animation.h  boot_screen.cpp  boot_screen.h  gestures.cpp  gestures.h  idf_component.yml  life_counter.cpp  life_counter.h  lv_conf.h  menu.cpp  menu.h
main/BAT_Driver/: BAT_Driver.h
main/I2C_Driver/: I2C_Driver.cpp  I2C_Driver.h
main/LCD_Driver/: ST77916.cpp  ST77916.h
main/LVGL_Driver/: LVGL_Driver.cpp  LVGL_Driver.h
main/PCF85063/: PCF85063.cpp
main/PWR_Key/: PWR_Key.cpp  PWR_Key.h
main/QMI8658/: QMI8658.cpp
main/SD_Card/: SD_MMC.cpp  SD_MMC.h
main/Touch_Driver/: CST816.cpp  CST816.h
src/: esp_panel_board_custom.h  esp_panel_board_custom_conf copy.h  esp_panel_board_custom_conf.h  esp_panel_board_supported_conf.h  esp_panel_drivers_conf.h  esp_utils_conf.h  gui_components.cpp  gui_components.h  gui_main.cpp  gui_main.h  lv_conf.h  lvgl_v8_port.h  main.cpp  main.h
src/battery/: battery_state.cpp  battery_state.h
src/constants/: constants.h
src/font/: lv_font_montserrat_64.c  lv_font_montserrat_72.c
src/gestures/: gestures.cpp  gestures.h
src/helpers/: animation_helpers.cpp  animation_helpers.h  event_grouper.h  tap_layer.cpp  tap_layer.h
src/history/: history.cpp  history.h
src/images/: logo.c  (+1 more)
(+22 files in other folders)
